fix: scrolling viewport on mobile landscape

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ li::before {
 
 @media (min-width: 600px) {
   body {
-    height: 100vh;
+    height: 100%;
     place-content: center;
     background: hsl(var(--clr-neutral-charcoal-grey));
   }
